# vutfit-projects

./: README.md
1sem/iel/: 00-projekt.tex  01-pr1.tex  02-pr2.tex  03-pr3.tex  04-pr4.tex  05-pr5.tex  06-tab.tex  Makefile  README.md  fitiel.cls
1sem/ius/IUS-Project/: IUS - tímový projekt.docx  README.md  assignment.md  class.agg.drawio  class.drawio  class.highlighted.drawio  communication.drawio  er.drawio  highlighter.js  project.md  sequence.drawio  state.drawio  usecase.drawio
1sem/ius/ius_du/: final.drawio  v1.drawio  v2.drawio  v3.drawio
1sem/izp/izp-projekt-1/: Makefile  t9search.c  tests.py
1sem/izp/izp-projekt-2/: Makefile  cluster.c
2sem/icp/: CMakeLists.txt  Doxyfile  Makefile  README.txt
2sem/icp/assets/: assets.qrc
2sem/icp/examples/: classic.map  classic.rec  default.map  default.rec  easy.map  easy.rec
2sem/icp/src/: game.cpp  game.h  game_map.cpp  game_map.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
2sem/icp/utils/: img2map.py
2sem/ijc/ijc1/: Makefile  bitset.h  eratosthenes.c  error.c  error.h  ppm.c  ppm.h  primes.c  steg-decode.c  steg-encode.c  test.c  test.sh  utf8_check.c
2sem/ijc/ijc2/: Makefile  htab.h  htab_bucket_count.c  htab_clear.c  htab_erase.c  htab_find.c  htab_for_each.c  htab_free.c  htab_hash_function.c  htab_init.c  htab_internal.h  htab_lookup_add.c  htab_size.c  htab_statistics.c  io.c  io.h  tail.c  test.sh  wordcount-.cc  wordcount.c
2sem/inc/inc/: Makefile  block_diagram.drawio  state_machine.drawio  testbench.vhd  uart.sh  uart_rx.vhd  uart_rx_fsm.vhd  zprava.html  zprava.md
2sem/ios/ios1/: mole
2sem/ios/ios1-wrong-version/: mole  test.sh
2sem/ios/ios2/: Makefile  customer.c  customer.h  employee.c  employee.h  proj2.c  proj2.h  utils.c
2sem/isu/: Makefile  fpu.asm  fpu2.asm  gdb-config  helloworld.asm  task.asm.1  test.asm  test3.asm
2sem/ivs/ivs1/: black_box_tests.cpp  tdd_code.cpp  tdd_code.h  tdd_tests.cpp  white_box_code.cpp  white_box_tests.cpp
2sem/ivs/ivs2/: README.md  (+4 more)
2sem/ivs/ivs2/src/backend/: Cargo.toml  build.rs  tauri.conf.json
2sem/ivs/ivs2/src/backend/icons/: icon.icns
2sem/ivs/ivs2/src/backend/src/: main.rs  math.pest  parser.rs
2sem/ivs/ivs2/src/stddev/: Cargo.toml
2sem/ivs/ivs2/src/stddev/src/: main.rs
3sem/ili/: xbrabl04-fit-ili.sh
3sem/iss/: xbrabl04.ipynb
4sem/ids/: README.md  advanced.sql  ids.sql  selects.sql
4sem/its/: Makefile  README.md  requirements.txt
5sem/iis/: .gitignore  Makefile  db.sql  db_production.sql  doc.html  er.drawio  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
5sem/imp/: .gitignore  Cargo.toml  Makefile  README.md
5sem/imp/.cargo/: config.toml
5sem/imp/documentation/: bibliography.bib  main.typ  template.typ  wiring.drawio
5sem/imp/src/: display.rs  gui.rs  input.rs  main.rs  state.rs  tuner.rs
5sem/ims/: .clang-format  .gitignore  Makefile  connecting_train.cpp  connecting_train.h  independent_train.cpp  independent_train.h  main.cpp  model_diagram.drawio  params.h  passenger.cpp  passenger.h  petri_nets.drawio  script.py  station.cpp  station.h  utils.cpp  utils.h
5sem/isa/: .gitignore  Makefile  README  config.c  config.h  connection.c  connection.h  imap.c  imap.h  imports.h  main.c  sgc.c  sgc.h  utils.c  utils.h  vec.c  vec.h
(+380 files in other folders)
