[package]
name = "fm_radio"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "fm_radio"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
rda5807m = {git = "https://github.com/pepega007xd/rda5807m"}
ssd1306 = "0.9.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"

[build-dependencies]
embuild = "0.32.0"

[profile.release]
opt-level = "z"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
